Fix spacing in research page

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -320,6 +320,8 @@ h3 /* .post-subtitle */ {
 }
 
 .research-intro {
+    margin-bottom: 1rem;
+
     > p:first-child {
         margin-bottom: 1.35rem;
     }
